# trellis2-apple

./: pyproject.toml  requirements_macos.txt  test_flex_gemm_integration.py
.github/workflows/: codeql.yml
benchmarks/: e2e_decoder.py
trellis2/modules/sparse/: config.py  norm.py
trellis2/modules/sparse/attention/: full_attn.py
